--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -36,3 +36,9 @@ jobs:
         run: |
           python Task2A.py
           python Task2D.py
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install haversine
+
